# BetterMoodle

./: .gitignore  package-lock.json  package.json
backend/: pyproject.toml
