[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Subeen Regmi",email = "subeenregmi123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "pymongo (>=4.12.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
